--- a/JS/index.html
+++ b/JS/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 
 <head>
-    <title>Document</title>
-    <script src="sketch.js"></script>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Game of Life</title>
+
+    <script type="text/javascript" src="sketch.js"></script>
 
 </head>
 
 <body>
-    <h2>Hola</h2>
 
 </body>
 
